Move ActiveScriptWrappable into bindings/core

The implementation of IsContextDestroyed creates a dependency to
ExecutionContext. This CL keeps ActiveScriptWrappableBase in
platform/bindings and moves ActiveScriptWrappable to bindings/core.

Bug: 750674
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ic9710f5d209c2a028b1e4393b70a94d9334efb26